--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "mpdf/mpdf": "^8.2",
         "simplesoftwareio/simple-qrcode": "~4"
     },
